syntax = "proto3";

option go_package = "github.com/Sirlanri/distiot-user-server/rpcHandler/pb";

package pb;

service TokenGuide {
    rpc GetToken(Tokenmsg) returns (UserIDmsg) {}
}
    
message Tokenmsg {
    string token = 1;
}
message UserIDmsg {
    int64 userID = 1;
}
